--- a/src/styles.css
+++ b/src/styles.css
@@ -9,6 +9,7 @@
 body {
   font-family: var(--default-font);
   color: var(--default-font-color);
+  background-color: #f9f7fe;
 }
 
 h1 {
@@ -72,4 +73,70 @@ nav a:hover,
 nav li.active a {
   color: var(--secondary-color);
   text-decoration: none;
+}
+
+.home-body {
+  text-align: center;
+}
+
+footer {
+  margin: 50px;
+}
+
+.footer-email {
+  font-size: 24px;
+  font-weight: 500;
+  line-height: 32px;
+  color: var(--default-font-color);
+}
+
+.footer-email:hover {
+  text-decoration: none;
+  color: var(--secondary-color);
+}
+footer {
+  text-align: center;
+}
+
+footer ul {
+  padding: 0;
+  margin: 10px;
+}
+
+footer li {
+  list-style: none;
+  display: inline;
+}
+
+footer li a {
+  margin: 10px;
+}
+
+.coded-link {
+  opacity: 0.7;
+  font-size: 10px;
+  color: var(--secondary-color);
+}
+
+.coded-link:hover {
+  text-decoration: none;
+  color: var(--default-font-color);
+}
+
+.list_of_services {
+  display: flex;
+  justify-content: space-between;
+  max-width: 80%;
+  margin: 0 auto;
+  padding: 0;
+}
+
+.service_offered {
+  list-style: none;
+  flex: 1;
+  margin: 0 10px;
+}
+
+.homepage_img {
+  width: 50%;
 }
